--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </div>
         <div class="box2">
           <input type="email" placeholder="email@example.com">
-          <a href="5"><input type="submit" value="Get Started For Free"> </input></a>
+          <button>Get Started For Free</button>
         </div>
       </div>
     </div>
